# PlugSafe

./: .gitignore  BUILDING.md  CMakeLists.txt  OLED_DRIVER_README.md  README.md  main.c  tusb_config.h
.github/workflows/: build.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  HARDWARE.md  IMPLEMENTATION_SUMMARY.md  THREAT_DETECTION.md  TROUBLESHOOTING.md
include/: hid_monitor.h  oled_config.h  oled_display.h  oled_driver.h  oled_font.h  oled_graphics.h  oled_i2c.h  oled_text.h  threat_analyzer.h  usb_detector.h  usb_host.h
src/: hid_monitor.c  oled_display.c  oled_driver.c  oled_font.c  oled_graphics.c  oled_i2c.c  oled_text.c  threat_analyzer.c  usb_detector.c  usb_host.c
